[tool.poetry]
name = "ttsDev"
version = "0.1.0"
description = "A simple stremlit web interface designed for quick and efficient comparison of various Text-to-Speech (TTS) models. "
authors = ["Joel <joelkronander@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ttsDev"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
elevenlabs = "^0.2.26"
pydub = "^0.25.1"
openai = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
